--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cypress": "^10.0.3",
     "next": "^12.1.5",
+    "node-fetch": "^3.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
