--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress": "^10.0.3",
     "next": "^12.1.5",
     "node-fetch": "^3.3.0",
+    "node-gzip": "^1.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
